--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,61 +37,61 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.3
-  firebase_auth: ^3.3.18
-  google_sign_in: ^5.3.1
+  firebase_auth: ^4.13.0
+  google_sign_in: ^6.1.6
   unicons: ^2.1.0
   bot_toast: ^4.0.2
-  google_fonts: ^3.0.0
-  cloud_firestore: ^3.1.15
-  geolocator: ^8.2.1
-  flutter_slidable: ^1.3.0
+  google_fonts: ^4.0.4
+  cloud_firestore: ^4.13.0
+  geolocator: ^10.1.0
+  flutter_slidable: ^3.0.1
   shared_preferences: ^2.0.15
-  lottie: ^1.3.0
-  image_picker: ^0.8.5+3
-  firebase_storage: ^10.2.16
+  lottie: ^2.7.0
+  image_picker: ^1.0.4
+  firebase_storage: ^11.5.0
   url_launcher: ^6.1.2
   provider: ^6.0.3
   fluttertoast: ^8.0.9
   number_inc_dec: ^0.8.0
-  flutter_staggered_grid_view: ^0.5.1
+  flutter_staggered_grid_view: ^0.7.0
   geocoding: ^2.0.4
   carousel_slider: ^4.1.1
   readmore: ^2.1.0
   google_maps_flutter: ^2.1.6
-  location: ^4.4.0
-  map_picker: ^0.0.3
-  flutter_svg: ^1.1.0
-  badges: ^2.0.3
-  flutter_launcher_icons: ^0.9.2
-  
-  firebase_messaging: ^11.4.1
-  firebase_core: ^1.17.1
-  flutter_local_notifications: ^9.6.0
-  visibility_detector: ^0.3.3
+  location: ^5.0.3
+  # map_picker: ^0.0.3
+  flutter_svg: ^2.0.9
+  badges: ^3.1.2
+  flutter_launcher_icons: ^0.13.1
+  firebase_messaging: ^14.7.4
+  firebase_core: ^2.22.0
+  flutter_local_notifications: ^16.1.0
+  visibility_detector: ^0.4.0+2
   video_player: ^2.4.4
   supercharged: ^2.1.1
   intl_phone_field: ^3.1.0
-  pin_code_fields: ^7.4.0
-  flutter_mapbox_autocomplete: ^2.0.0
+  intl: ^0.18.1
+  pin_code_fields: ^8.0.1
+  # flutter_mapbox_autocomplete: ^2.0.0
   loading_indicator: ^3.1.0
-  flutter_speed_dial: ^6.0.0
-  google_place: ^0.4.7 
+  flutter_speed_dial: ^7.0.0
+  # google_place: ^0.4.7 
   flutter_advanced_segment: ^3.0.1
-  material_segmented_control: ^4.0.0
+  material_segmented_control: ^5.0.0
   flutter_colorful_tab: ^0.1.0
-  photo_manager: ^2.2.1
-  wechat_assets_picker: ^8.0.2
-  wechat_camera_picker: ^3.5.0+1
+  wechat_assets_picker: ^8.6.3
+  extended_image: ^8.1.0
+  wechat_camera_picker: ^4.0.2
   crop_your_image: ^0.7.2
-  flutter_image_compress: ^1.1.2
-  dio: ^4.0.6
+  flutter_image_compress: ^2.1.0
+  dio: ^5.3.3
   cached_network_image: ^3.2.2
   simple_animations: ^5.0.0+2
   smooth_page_indicator: ^1.0.0+2
   progress_indicators: ^1.0.0
   flutter_html_to_pdf: ^0.7.0
-  open_file:
-    path: './plugins/open_file_3.2.1/'
+  open_file: ^3.3.2
+    # path: './plugins/open_file_3.2.1/'
   multiselect_formfield: ^0.1.7
   flutter_multiselect: ^1.0.0
 dev_dependencies:
@@ -103,7 +103,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
